--- a/ref.bib
+++ b/ref.bib
@@ -16,7 +16,7 @@
     title = "{General Relativity}",
     publisher = "Chicago University Press",
     address = "Chicago, U.S.A.",
-    year = "1984"
+    year = "1984",
 }
 
 @article{Iyer:1994ys,
@@ -41,14 +41,15 @@
 }
 
 @book{compere2019advanced,
-  title={Advanced lectures on general relativity},
+  title={Advanced Lectures on General Relativity},
   author={Comp{\`e}re, Geoffrey},
   series         = {Lecture Notes in Physics},
   year={2019},
-  publisher={Springer Cham}
+  publisher={Springer Cham},
+  eprint         = {1801.07064},
 }
 
-@unpublished{Gieres:2021ekc,
+@article{Gieres:2021ekc,
     author = "Gieres, Francois",
     title = "{Covariant canonical formulations of classical field theories}",
     eprint = "2109.07330",
@@ -56,4 +57,12 @@
     primaryClass = "hep-th",
     month = "9",
     year = "2021"
+}
+
+@book{nakahara2003geometry,
+  title={Geometry, Topology and Physics},
+  author={Nakahara, Mikio},
+  year={2003},
+  publisher={CRC press},
+  edition        = {2},
 }
