--- a/main.tex
+++ b/main.tex
@@ -422,21 +422,13 @@ Therefore we can make the following definition
 \end{proof}
 
 \section{Examples}
-\begin{example}[Partical mechanics]
-    1
-\end{example}
+\subsection{Partical mechanics}
 
-\begin{example}[Two-derivative scalar field]
-    1
-\end{example}
+\subsection{Two-derivative scalar field}
 
-\begin{example}[Maxwell theory]
-    1
-\end{example}
+\subsection{Maxwell theory}
 
-\begin{example}[General relativity]
-    1
-\end{example}
+\subsection{General relativity}
 
 \clearpage
 \bibliographystyle{jhep}
